--- a/scss/components/home/_information.scss
+++ b/scss/components/home/_information.scss
@@ -3,6 +3,7 @@
 	height: auto;
 	background-color: $heavy_metal;
     margin-top: 118px;
+    padding-bottom: 10px;
 
     @media(min-width: 1199px){
         display: none;
