--- a/scss/components/services/_hero_services.scss
+++ b/scss/components/services/_hero_services.scss
@@ -10,6 +10,7 @@
         background-attachment: fixed;  
         position: relative;
         height: 300px;
+        margin-top: 250px;
     }
 
     img{
