--- a/scss/components/units/_hero_units.scss
+++ b/scss/components/units/_hero_units.scss
@@ -10,6 +10,7 @@
         background-attachment: fixed;  
         position: relative;
         height: 600px;
+        margin-top: 250px;
     }
 
     img{
