--- a/scss/components/cobertura/_hero_cobertura.scss
+++ b/scss/components/cobertura/_hero_cobertura.scss
@@ -1,7 +1,7 @@
 .hero_cobertura{
     width: 100%;
     height: 100%;
-    background-image:linear-gradient(rgba(29,62, 153,0.5),rgba(29, 62, 153, 0.3)),url('https://static.wixstatic.com/media/914e21_775107af93944a8f926f38c5372df39c~mv2.png/v1/fill/w_640,h_544,al_c,q_85,usm_1.20_1.00_0.01,enc_auto/914e21_775107af93944a8f926f38c5372df39c~mv2.png');	
+    background-image:linear-gradient(rgba(29,62, 153,0.5),rgba(29, 62, 153, 0.3)),url('../../../img/COBERTURA\ DE\ FLETES.png');	
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
