--- a/scss/components/home/_imagen.scss
+++ b/scss/components/home/_imagen.scss
@@ -1,7 +1,7 @@
 .imagen{
     width: 100%;
     height: 200px;
-    background-image: url("https://static.wixstatic.com/media/914e21_c7dbbfe791c74650ae87356a9c8a40e7~mv2.png/v1/fill/w_1350,h_433,al_c,q_90,usm_1.20_1.00_0.01,enc_auto/914e21_c7dbbfe791c74650ae87356a9c8a40e7~mv2.png");
+    background-image: url("../../../img/fletes-torton.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
