--- a/scss/components/units/_hero_units.scss
+++ b/scss/components/units/_hero_units.scss
@@ -3,7 +3,7 @@
     height: 100%;
     
      @media(min-width: 1199px){
-        background-image: url("https://static.wixstatic.com/media/914e21_58575822193d4c4fb1773e92c871fc0f~mv2.jpg/v1/fill/w_1350,h_383,al_c,q_85,usm_1.20_1.00_0.01,enc_auto/914e21_58575822193d4c4fb1773e92c871fc0f~mv2.jpg");
+        background-image: url("../../../img/FLETES URGENTES.png");
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
