--- a/css/main.css
+++ b/css/main.css
@@ -1010,32 +1010,32 @@
     .quote__grid__modal_form {
       width: 100%; }
       .quote__grid__modal_form--one {
-        background-image: url("https://static.wixstatic.com/media/914e21_4e0c9f87c0ea4521b0f3288a351408f5~mv2.jpg/v1/fill/w_490,h_222,al_c,q_80,usm_1.20_1.00_0.01,enc_auto/914e21_4e0c9f87c0ea4521b0f3288a351408f5~mv2.jpg");
+        background-image: url("../../../img/trailer1.jpg");
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat; }
       .quote__grid__modal_form--two {
-        background-image: url("https://static.wixstatic.com/media/914e21_8d9d42d4833145aa9ac38aecf6d2aee0~mv2.jpg/v1/fill/w_490,h_222,al_c,q_80,usm_1.20_1.00_0.01,enc_auto/914e21_8d9d42d4833145aa9ac38aecf6d2aee0~mv2.jpg");
+        background-image: url("../../../img/trailer2.jpg");
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat; }
       .quote__grid__modal_form--three {
-        background-image: url("https://static.wixstatic.com/media/914e21_3250938d743c46afba46bb437fd31de1~mv2.jpg/v1/fill/w_490,h_222,al_c,q_80,usm_1.20_1.00_0.01,enc_auto/914e21_3250938d743c46afba46bb437fd31de1~mv2.jpg");
+        background-image: url("../../../img/trailer3.jpg");
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat; }
       .quote__grid__modal_form--four {
-        background-image: url("https://static.wixstatic.com/media/914e21_0a3f52f10a534e97bf2531aa363cec21~mv2.jpg/v1/fill/w_490,h_222,al_c,q_80,usm_1.20_1.00_0.01,enc_auto/914e21_0a3f52f10a534e97bf2531aa363cec21~mv2.jpg");
+        background-image: url("../../../img/trailer4.jpg");
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat; }
       .quote__grid__modal_form--five {
-        background-image: url("https://static.wixstatic.com/media/914e21_dfe23d7d7baf4e4481513fa34159d3a6~mv2.jpg/v1/fill/w_490,h_222,al_c,q_80,usm_1.20_1.00_0.01,enc_auto/914e21_dfe23d7d7baf4e4481513fa34159d3a6~mv2.jpg");
+        background-image: url("../../../img/trailer5.jpg");
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat; }
       .quote__grid__modal_form--six {
-        background-image: url("https://static.wixstatic.com/media/914e21_3ae773b01dd4449f911c416dd015b57b~mv2.jpg/v1/fill/w_490,h_222,al_c,q_80,usm_1.20_1.00_0.01,enc_auto/914e21_3ae773b01dd4449f911c416dd015b57b~mv2.jpg");
+        background-image: url("../../../img/trailer6.jpg");
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat; }
@@ -1206,7 +1206,7 @@
 .imagen {
   width: 100%;
   height: 200px;
-  background-image: url("https://static.wixstatic.com/media/914e21_c7dbbfe791c74650ae87356a9c8a40e7~mv2.png/v1/fill/w_1350,h_433,al_c,q_90,usm_1.20_1.00_0.01,enc_auto/914e21_c7dbbfe791c74650ae87356a9c8a40e7~mv2.png");
+  background-image: url("../../../img/fletes-torton.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -1223,7 +1223,7 @@
   height: 100%; }
   @media (min-width: 1199px) {
     .hero_units {
-      background-image: url("https://static.wixstatic.com/media/914e21_58575822193d4c4fb1773e92c871fc0f~mv2.jpg/v1/fill/w_1350,h_383,al_c,q_85,usm_1.20_1.00_0.01,enc_auto/914e21_58575822193d4c4fb1773e92c871fc0f~mv2.jpg");
+      background-image: url("../../../img/FLETES URGENTES.png");
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
@@ -1540,7 +1540,7 @@
 .image_services {
   width: 100%;
   height: 200px;
-  background-image: url("https://static.wixstatic.com/media/914e21_b87c4e9a10ae4280b3e27dbd2dc74459~mv2.png/v1/fill/w_1350,h_444,al_c,q_90,usm_1.20_1.00_0.01,enc_auto/914e21_b87c4e9a10ae4280b3e27dbd2dc74459~mv2.png");
+  background-image: url("../../../img/FLETES URGENTES.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -1553,7 +1553,7 @@
 .hero_cobertura {
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(rgba(29, 62, 153, 0.5), rgba(29, 62, 153, 0.3)), url("https://static.wixstatic.com/media/914e21_775107af93944a8f926f38c5372df39c~mv2.png/v1/fill/w_640,h_544,al_c,q_85,usm_1.20_1.00_0.01,enc_auto/914e21_775107af93944a8f926f38c5372df39c~mv2.png");
+  background-image: linear-gradient(rgba(29, 62, 153, 0.5), rgba(29, 62, 153, 0.3)), url("../../../img/COBERTURA DE FLETES.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center; }
@@ -1680,7 +1680,7 @@
   display: none;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url("https://static.wixstatic.com/media/914e21_c91f8e3941ac4fd58d3b5a8f24e9a1a0~mv2.png/v1/fill/w_721,h_398,al_c,lg_1,q_85,usm_1.20_1.00_0.01,enc_auto/NicePng_mapa-png_3532183.png");
+  background-image: url("../../../img/NicePng_mapa-png_3532183.png");
   animation-name: animationhero;
   animation-duration: 4s;
   animation-iteration-count: initial; }
