--- a/scss/components/cobertura/_location.scss
+++ b/scss/components/cobertura/_location.scss
@@ -54,7 +54,7 @@
     display: none;
     background-repeat: no-repeat;
     background-position: center;
-    background-image: url("https://static.wixstatic.com/media/914e21_c91f8e3941ac4fd58d3b5a8f24e9a1a0~mv2.png/v1/fill/w_721,h_398,al_c,lg_1,q_85,usm_1.20_1.00_0.01,enc_auto/NicePng_mapa-png_3532183.png");
+    background-image: url("../../../img/NicePng_mapa-png_3532183.png");
     animation-name: animationhero;
     animation-duration: 4s;
     animation-iteration-count:initial;
