--- a/scss/components/home/_quote.scss
+++ b/scss/components/home/_quote.scss
@@ -88,28 +88,28 @@
             width: 100%;
 
             &--one{
-                background-image: url("https://static.wixstatic.com/media/914e21_4e0c9f87c0ea4521b0f3288a351408f5~mv2.jpg/v1/fill/w_490,h_222,al_c,q_80,usm_1.20_1.00_0.01,enc_auto/914e21_4e0c9f87c0ea4521b0f3288a351408f5~mv2.jpg");
+                background-image: url("../../../img/trailer1.jpg");
                 background-position: center;
                 background-size: cover;
                 background-repeat: no-repeat;
             }
 
             &--two{
-                background-image: url("https://static.wixstatic.com/media/914e21_8d9d42d4833145aa9ac38aecf6d2aee0~mv2.jpg/v1/fill/w_490,h_222,al_c,q_80,usm_1.20_1.00_0.01,enc_auto/914e21_8d9d42d4833145aa9ac38aecf6d2aee0~mv2.jpg");
+                background-image: url("../../../img/trailer2.jpg");
                 background-position: center;
                 background-size: cover;
                 background-repeat: no-repeat;
             }
 
             &--three{
-                background-image: url("https://static.wixstatic.com/media/914e21_3250938d743c46afba46bb437fd31de1~mv2.jpg/v1/fill/w_490,h_222,al_c,q_80,usm_1.20_1.00_0.01,enc_auto/914e21_3250938d743c46afba46bb437fd31de1~mv2.jpg");
+                background-image: url("../../../img/trailer3.jpg");
                 background-position: center;
                 background-size: cover;
                 background-repeat: no-repeat;
             }
 
             &--four{
-                background-image: url("https://static.wixstatic.com/media/914e21_0a3f52f10a534e97bf2531aa363cec21~mv2.jpg/v1/fill/w_490,h_222,al_c,q_80,usm_1.20_1.00_0.01,enc_auto/914e21_0a3f52f10a534e97bf2531aa363cec21~mv2.jpg");
+                background-image: url("../../../img/trailer4.jpg");
                 background-position: center;
                 background-size: cover;
                 background-repeat: no-repeat;
@@ -117,7 +117,7 @@
             }
 
             &--five{
-                background-image: url("https://static.wixstatic.com/media/914e21_dfe23d7d7baf4e4481513fa34159d3a6~mv2.jpg/v1/fill/w_490,h_222,al_c,q_80,usm_1.20_1.00_0.01,enc_auto/914e21_dfe23d7d7baf4e4481513fa34159d3a6~mv2.jpg");
+                background-image: url("../../../img/trailer5.jpg");
                 background-position: center;
                 background-size: cover;
                 background-repeat: no-repeat;
@@ -125,7 +125,7 @@
             }
 
             &--six{
-                background-image: url("https://static.wixstatic.com/media/914e21_3ae773b01dd4449f911c416dd015b57b~mv2.jpg/v1/fill/w_490,h_222,al_c,q_80,usm_1.20_1.00_0.01,enc_auto/914e21_3ae773b01dd4449f911c416dd015b57b~mv2.jpg");
+                background-image: url("../../../img/trailer6.jpg");
                 background-position: center;
                 background-size: cover;
                 background-repeat: no-repeat;
