--- a/scss/components/services/_image_services.scss
+++ b/scss/components/services/_image_services.scss
@@ -1,7 +1,7 @@
 .image_services{
     width: 100%;
     height: 200px;
-    background-image: url("https://static.wixstatic.com/media/914e21_b87c4e9a10ae4280b3e27dbd2dc74459~mv2.png/v1/fill/w_1350,h_444,al_c,q_90,usm_1.20_1.00_0.01,enc_auto/914e21_b87c4e9a10ae4280b3e27dbd2dc74459~mv2.png");
+    background-image: url("../../../img/FLETES URGENTES.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position:center;
