--- a/scss/components/cobertura/_hero_cobertura.scss
+++ b/scss/components/cobertura/_hero_cobertura.scss
@@ -1,7 +1,7 @@
 .hero_cobertura{
     width: 100%;
     height: 100%;
-    background-image:linear-gradient(rgba(29,62, 153,0.5),rgba(29, 62, 153, 0.3)),url('../../../img/COBERTURA\ DE\ FLETES.png');	
+    background-image:linear-gradient(rgba(29,62, 153,0.5),rgba(29, 62, 153, 0.3)),url('../img/COBERTURA\ DE\ FLETES.png');	
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
