--- a/scss/components/cobertura/_location.scss
+++ b/scss/components/cobertura/_location.scss
@@ -54,7 +54,7 @@
     display: none;
     background-repeat: no-repeat;
     background-position: center;
-    background-image: url("../../../img/NicePng_mapa-png_3532183.png");
+    background-image: url("../img/NicePng_mapa-png_3532183.png");
     animation-name: animationhero;
     animation-duration: 4s;
     animation-iteration-count:initial;
