--- a/scss/components/home/_quote.scss
+++ b/scss/components/home/_quote.scss
@@ -88,28 +88,28 @@
             width: 100%;
 
             &--one{
-                background-image: url("../../../img/trailer1.jpg");
+                background-image: url("../trailer1.jpg");
                 background-position: center;
                 background-size: cover;
                 background-repeat: no-repeat;
             }
 
             &--two{
-                background-image: url("../../../img/trailer2.jpg");
+                background-image: url("../img/trailer2.jpg");
                 background-position: center;
                 background-size: cover;
                 background-repeat: no-repeat;
             }
 
             &--three{
-                background-image: url("../../../img/trailer3.jpg");
+                background-image: url("../img/trailer3.jpg");
                 background-position: center;
                 background-size: cover;
                 background-repeat: no-repeat;
             }
 
             &--four{
-                background-image: url("../../../img/trailer4.jpg");
+                background-image: url("../img/trailer4.jpg");
                 background-position: center;
                 background-size: cover;
                 background-repeat: no-repeat;
@@ -117,7 +117,7 @@
             }
 
             &--five{
-                background-image: url("../../../img/trailer5.jpg");
+                background-image: url("../img/trailer5.jpg");
                 background-position: center;
                 background-size: cover;
                 background-repeat: no-repeat;
@@ -125,7 +125,7 @@
             }
 
             &--six{
-                background-image: url("../../../img/trailer6.jpg");
+                background-image: url("../img/trailer6.jpg");
                 background-position: center;
                 background-size: cover;
                 background-repeat: no-repeat;
