--- a/scss/components/services/_image_services.scss
+++ b/scss/components/services/_image_services.scss
@@ -1,7 +1,7 @@
 .image_services{
     width: 100%;
     height: 200px;
-    background-image: url("../../../img/FLETES URGENTES.png");
+    background-image: url("../img/FLETES URGENTES.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position:center;
