--- a/scss/components/units/_hero_units.scss
+++ b/scss/components/units/_hero_units.scss
@@ -3,7 +3,7 @@
     height: 100%;
     
      @media(min-width: 1199px){
-        background-image: url("../../../img/FLETES URGENTES.png");
+        background-image: url("../img/FLETES URGENTES.png");
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
