--- a/scss/components/home/_imagen.scss
+++ b/scss/components/home/_imagen.scss
@@ -1,7 +1,7 @@
 .imagen{
     width: 100%;
     height: 200px;
-    background-image: url("../../../img/fletes-torton.png");
+    background-image: url("../img/fletes-torton.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
