--- a/scss/components/services/_hero_services.scss
+++ b/scss/components/services/_hero_services.scss
@@ -3,7 +3,7 @@
     height: 100%;
     
      @media(min-width: 1199px){
-        background-image: url("https://static.wixstatic.com/media/914e21_d35a86a1b60c4abb853683eb5844e42f~mv2.png/v1/fill/w_1350,h_444,al_b,q_90,usm_1.20_1.00_0.01,enc_auto/914e21_d35a86a1b60c4abb853683eb5844e42f~mv2.png");
+        background-image: url("../img/NUESTROS\ SERVICIOS.png");
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
