--- a/css/main.css
+++ b/css/main.css
@@ -1010,7 +1010,7 @@
     .quote__grid__modal_form {
       width: 100%; }
       .quote__grid__modal_form--one {
-        background-image: url("../trailer1.jpg");
+        background-image: url("../img/trailer1.jpg");
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat; }
