--- a/scss/components/home/_quote.scss
+++ b/scss/components/home/_quote.scss
@@ -88,7 +88,7 @@
             width: 100%;
 
             &--one{
-                background-image: url("../trailer1.jpg");
+                background-image: url("../img/trailer1.jpg");
                 background-position: center;
                 background-size: cover;
                 background-repeat: no-repeat;
