--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,6 +24,8 @@
 @import 'components/home/why_we';
 @import 'components/home/urgent';
 @import 'components/home/imagen';
+@import 'components/home/aviso_de_privacidad';
+
 
 //*Components Units
 @import 'components/units/hero_units';
