--- a/scss/components/home/_why_we.scss
+++ b/scss/components/home/_why_we.scss
@@ -13,7 +13,7 @@
     h1{
         width: 50%;
         color: $mikado_yellow;
-        line-height: 0.8em;
+        line-height: 40px;
         text-align: center;
         font-size: 34px;
         letter-spacing: -0.05em;
